@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model Excerpt - US04

class Administrator {
}

class Organization {
    name
}

enum OrganizationType {
    COMPANY
    POLITICAL_PARTY
    FOUNDATION
    INSTITUTE
    ASSOCIATION
}

enum OrganizationNature {
    PUBLIC
    PRIVATE
    SOCIAL
}

Administrator "1" -- "*" Organization : registers >

Organization "*" -- "1" OrganizationType : classified as
Organization "*" -- "1" OrganizationNature : has nature >

@enduml
